gcc/testsuite/rust/rustc/ui/parser/keyword-loop-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py loop'

fn main() {
    let loop = "foo"; // { dg-error "" "" { target *-*-* } }
}

